--- a/backend/package.json
+++ b/backend/package.json
@@ -3,21 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "ts-node-dev api/openai.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1",
-    "morgan": "^1.10.0",
-    "node-fetch": "^3.3.1"
+    "axios": "^1.3.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
     "@types/node": "^18.11.9",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
