--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev api/openai.ts",
+    "dev": "ts-node-dev backend/api/openai.ts",
     "build": "tsc"
   },
   "dependencies": {
-    "axios": "^1.3.4"
+    "openai": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
